--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,14 @@
-/*Enhance my style*/
+/*Tidy up my code*/
 html {
 	max-width: 1000px;
 	margin: 0 auto;
-
+	background: #C0C0C0;
+}
+body{
+	background: #D3D3D3;
 }
 .header{
+	text-align: center;
 	font-style:Verdana; 
 	font-size: 20px;
 	color:white;
@@ -16,7 +20,6 @@ html {
 #main{
 	font-style:Helvetica;
 	font-size: 30px; 
-	border-radius: 10px;
 }
 .footer{
 	font-style:sans-serif;
@@ -26,50 +29,61 @@ html {
 }
 /*Rotate*/
 .photo-container {
-  cursor: pointer;
-  height: 250px;
-  perspective: 600; /*Ubah perspektif dengan perspective*/
-  position: relative;
-  width: 250px;
+	cursor: pointer;
+	height: 250px;
+/*Ubah perspektif dengan perspective*/
+	perspective: 600; 
+	position: relative;
+	width: 250px;
 }
 .photo {
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: all 1s ease-in-out;
-  width: 100%;
+	height: 100%;
+	position: absolute;
+	transform-style: preserve-3d;
+	transition: all 1s ease-in-out;
+	width: 100%;
 }
 .photo:hover { 
-  transform: rotateY(180deg) scale(1.25);/*Putar dengan rotate & Ubah skala bentuk dengan scale*/
+/*Putar dengan rotate & Ubah skala bentuk dengan scale*/
+	transform: rotateY(180deg) scale(1.25);
 }
 .photo .side {
-  backface-visibility: hidden;
-  border-radius: 6px;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
+	backface-visibility: hidden;
+	border-radius: 6px;
+	height: 100%;
+	position: absolute;
+	overflow: hidden;
+	width: 100%;
 }
 .photo .back {
-  background: #eaeaed;
-  color: #0087cc;
-  line-height: 250px;
-  text-align: center;
-  transform: rotateY(180deg) scale(1.0);
+	background: #eaeaed;
+	color: #0087cc;
+	line-height: 250px;
+	text-align: center;
+  	transform: rotateY(180deg) scale(1.0);
 }
 .spin {
-  cursor: pointer;
-  transform-style: preserve-3d;
-  animation: spin 5s linear infinite;
+	width:30px; 
+	height:30px;
+	align-content: center;
+	cursor: pointer;
+	transform-style: preserve-3d;
+	animation: spin 5s linear infinite;
 }
 .spin:hover {
-	transform: skew(10deg, 30deg) translateX(30px) scale(1.75) infinite;/*skew & translate*/ 
+/*skew & translate*/
+	transform: skew(10deg, 30deg) translateX(30px) scale(1.75) infinite; 
 }
-@keyframes spin { /*keyframe*/
-  0% {
-    transform: rotateY(0deg);
-  }
-  100% {
-    transform: rotateY(360deg);
-  }
+/*keyframe*/
+@keyframes spin { 
+	0% {
+		transform: rotateY(0deg);
+	}
+	100% {
+		transform: rotateY(360deg);
+	}
+}
+.middle{
+	text-align: center;
+	color: #8B008B;
 }
