--- a/webdev/css/webdev.css
+++ b/webdev/css/webdev.css
@@ -24,8 +24,8 @@ footer {
     }
 }
 img{
-    width: 750px;
-    height: 200px;
+    width: 100%;
+    height: 70%;
 }
 .classbtn {
     margin: 10px 0 10px 0;
