--- a/webdev/css/webdev.css
+++ b/webdev/css/webdev.css
@@ -27,6 +27,10 @@ img{
     width: 100%;
     height: 70%;
 }
+.smallimg{
+    with:100%;
+    height: 50%;
+}
 .classbtn {
     margin: 10px 0 10px 0;
 }
@@ -37,3 +41,4 @@ img{
 .pnext{
     color: grey;
 }
+
