--- a/webdev/css/webdev.css
+++ b/webdev/css/webdev.css
@@ -41,4 +41,11 @@ img{
 .pnext{
     color: grey;
 }
-
+p{
+    text-align: justify;
+    text-indent: 50px;
+}
+.propheader{
+    height: 200px;
+    width: 920px;
+}
